third_party/move/move-compiler-v2/tests/checking/naming/generics_with_type_parameters.exp

Diagnostics:
error: expected 0 type arguments but 1 were provided
  ┌─ tests/checking/naming/generics_with_type_parameters.move:2:22
  │
2 │     struct S<T> { f: T<u64> }
  │                      ^^^^^^

error: expected 0 type arguments but 1 were provided
  ┌─ tests/checking/naming/generics_with_type_parameters.move:3:19
  │
3 │     fun foo<T>(x: T<bool>): T<u64> {}
  │                   ^^^^^^^

error: expected 0 type arguments but 1 were provided
  ┌─ tests/checking/naming/generics_with_type_parameters.move:3:29
  │
3 │     fun foo<T>(x: T<bool>): T<u64> {}
  │                             ^^^^^^
